syntax = "proto3";

package nfpb;

import "nfpb/studio.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/nfpb";

message GetAllStudiosRequest {
    int32 pageNumber = 1;
    int32 pageSize = 2;
}

message GetAllStudiosResponse { 
    repeated Studio studios = 1;
}